loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service

  # Azure LoadBalancerのILB(内部ロードバランサ)とELB(外部ロードバランサ)
  # annotations 指定あり: ILBとPrivate IP でクラスタ内部にサービス公開
  # annotations 指定なし: ELBとPublic IPを作成し、クラスタ外部にサービス公開
  #annotations:
    #service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    #service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "InternalEndpointSubnet"
spec:
  type: LoadBalancer
  selector:
    app: nginx
  #loadBalancerSourceRanges:
  #- 39.110.xxx.xxx/32
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
