backend-policy.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#  name: ”ポリシー名”
#  namespace: ”ポリシーのネームスペース名”
# spec:
#  podSelector: ”適用するPod”
#  policyTypes:
#  - Ingress ”Ingressトラフィックをすべて拒否する”
#  - Egress ”Egressトラフィックをすべて拒否する”
#  ingress: ”許可するIngressトラフィックの条件”
#  egress: ”許可するEgressトラフィックの条件”
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-policy
  namespace: development
spec:
  podSelector:
    matchLabels:
      app: webapp
      role: backend
  ingress:
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: webapp
          role: frontend
