networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-policy
  namespace: default

# すべてのインバウンド/アウトバウンドを拒否
# spec:
#   podSelector: {}
#   policyTypes:
#   - Ingress
#   - Egress

# すべてのインバウンドを許可
# spec:
#   podSelector: {}
#   ingress:
#   - {}

# ポリシーを適用するPodの条件
# spec:
#   podSelector: 
#     matchLabels:
#       app: nginx
#   policyTypes:
#   - Ingress # Ingressトラフィックをすべて拒否
#   #- Egress  # Egressトラフィックをすべて拒否
#   ingress:  # 許可するIngressトラフィックの条件
#   - from:
#     - ipBlock:
#         cidr: 39.110.159.85/32
#   egress:  # 許可するEgressトラフィックの条件

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
